Todos endpoints almost done
